Created idempotency AOP (#72)
* Created idempotency AOP

* Fixed issues mentioned in the pull request
Created tests for RequestLockService and DuplicateRequestCheck